Refactor data handling; change totalDistance type to int, remove unused calculator beans, and simplify stream operations in controllers