@@ -3,13 +3,16 @@ package com.fueltracker.utils;
 import com.fueltracker.model.dto.Dates;
 import com.fueltracker.model.entity.Expense;
 import com.fueltracker.model.entity.Refuel;
+import org.springframework.stereotype.Component;
 
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
+@Component
 public class DateCalculator {
+
     public Dates startAndEndDateCalculator(List<Refuel> refuels, List<Expense> expenses) {
         List<LocalDate> dates = new ArrayList<>();
 
@@ -18,8 +21,8 @@ public class DateCalculator {
         Collections.sort(dates);
 
         return Dates.builder()
-                .startDate(dates.get(0))
-                .endDate(dates.get(dates.size() - 1))
+                .startDate(dates.getFirst())
+                .endDate(dates.getLast())
                 .build();
     }
 
@@ -30,8 +33,8 @@ public class DateCalculator {
         Collections.sort(dates);
 
         return Dates.builder()
-                .startDate(dates.get(0))
-                .endDate(dates.get(dates.size() - 1))
+                .startDate(dates.getFirst())
+                .endDate(dates.getLast())
                 .build();
     }
 }
